<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_PN" Id="{d0251ff4-a309-4c54-8d9d-1f21c8bac127}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	DO_From_ROB AT %I* :BYTE;
	DI_TO_ROB AT %Q* :BYTE;
	DO_From_ROB_2 AT %I* :BYTE;
	DI_TO_ROB_2 AT %Q* :BYTE;
	
	AO_From_ROB AT %I* :WORD;
	AI_TO_ROB AT %Q* :WORD;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>