<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="P_Data_Convert" Id="{1e3ebec6-1f51-4456-a806-9c850c3d3b28}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Data_Convert
VAR
	input_Bool:BOOL;
	output_Bool:BOOL;
	input_Bool_2:BOOL;
	output_Bool_2:BOOL;
	
	input_REAL:WORD;
	output_REAL:WORD;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

input_Bool:= BYTE_TO_BIT(GVL_PN.DO_From_ROB AND 16#1);
input_Bool_2:=BYTE_TO_BIT(GVL_PN.DO_From_ROB AND 16#2);

input_REAL:= GVL_PN.AO_From_ROB;
GVL_PN.AI_TO_ROB:=output_REAL;]]></ST>
    </Implementation>
    <LineIds Name="P_Data_Convert">
      <LineId Id="42" Count="1" />
      <LineId Id="12" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="45" Count="2" />
    </LineIds>
  </POU>
</TcPlcObject>